// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlatformManifestService > generates the required app stack fields in stable service order 1`] = `
"name: hello-universe
owner: platform-engineering
domain:
  production: hello-universe.example.com
  preview: hello-universe.preview.example.com
environments:
  preview:
    branch: preview
  production:
    branch: main
services:
  - auth
  - email
resources:
  - postgresql
  - redis
"
`;

exports[`PlatformManifestService > generates the static stack shape without app-only fields 1`] = `
"name: marketing-site
stack: static
domain:
  production: marketing-site.example.com
  preview: marketing-site.preview.example.com
environments:
  preview:
    branch: preview
  production:
    branch: main
"
`;
